2006-01-28  Alex Roitman  <shura@gramps-project.org>
	* src/GnomeMime.py: Import neede modules.
	* doc/grampsxml.dtd: Events preceed people.
	* doc/grampsxml.rng: Events preceed people.
	* src/GrampsDb/_WriteXML.py: Events preceed people.
	* src/GrampsDb/_ReadXML.py: Parse old and new style events, old
	witnesses, new eventrefs.

2006-01-28  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: add SourceRefModel, NameEmbedList, 
	AddrEmbedList
	* src/EditPerson.py: Use new EmbedLists
	* src/ViewManager.py: set max value on set_fraction
	* src/edit_person.glade: remove old lists
	* src/GrampsDb/_ReadGedcom.py: fix types
	* src/EditFamily.py: fix variable names
	* src/GrampsDb/_GrampsBSDDB.py: qualify strxfrm

2006-01-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Typo.
	* src/GrampsDb/_GrampsBSDDB.py: Correct duplicate event IDs on upgrade.
	* src/GrampsDb/_WriteXML.py: More XML updates.

	* doc/grampsxml.dtd: Update to reflect new XML.
	* src/GrampsDb/_ReadGedcom.py (parse_repo_ref_caln): Properly set
	media type.
	* src/GrampsDb/_WriteXML.py: More XML updates.
	* doc/grampsxml.rng: Update to reflect new XML.

	* src/GrampsDb/_GrampsBSDDB.py: Typos.
	* src/GrampsDb/_WriteXML.py: Minor corrections.
	* doc/grampsxml.rng: Updates.
	* example/gramps/example.gramps: New XML example.

2006-01-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcomp.py: preselect gramps ids for events

2006-01-26  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: optimization
	* src/DisplayTabs.py: improved docs
	* src/ViewManger.py: remove import_tool_callback
	* src/GrampsDb/_ReadGedcom.py: fix repeated translation call

2006-01-25  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Add proper upgrade path from
	within load.
	* src/GenericFilters.py (get_filters): Use default value of
	'generic' for the namespace argument; Remove unneeded import.
	* src/GrampsDb/_ConstXML.py: Add new file.